<resources>
    <string name="app_name">ExamenParcial_1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="password">Type ur Password</string>
    <string name="user">Type ur User</string>
    <string name="delete">DELETE</string>
    <string name="update">UPDATE</string>
    <string name="article">NEW ARTICLE</string>
    <string name="title">Type ur Title</string>
    <string name="description">Type ur description</string>
    <string name="create">CREATE</string>
    <string name="edit">EDIT</string>
    <string name="done">DONE</string>
    <string name="lector">Se ha ingresado con un usuario Lector</string>
    <string name="escritor">Se ha ingresado con un usuario Escritor</string>
</resources>