<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/loginImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_user"
            app:layout_constraintBottom_toTopOf="@+id/edtUser"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

       <EditText
           android:id="@+id/edtUser"
           android:layout_width="300dp"
           android:layout_height="wrap_content"
           android:hint="@string/user"
           android:inputType="text"
           app:layout_constraintTop_toBottomOf="@+id/loginImage"
           app:layout_constraintBottom_toBottomOf="@+id/edtPassword"
           app:layout_constraintEnd_toEndOf="@+id/loginImage"
           app:layout_constraintStart_toStartOf="@+id/loginImage" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:enabled="false"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@+id/edtUser"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/edtUser"
            app:layout_constraintStart_toStartOf="@+id/edtUser" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="70dp"
            android:hint="@string/login"
            android:enabled="false"
            app:layout_constraintTop_toBottomOf="@+id/edtPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>